add identified code check api
