# src/app/router/router.go
@@ -58,6 +58,7 @@ func InitialRouterEngine() *gin.Engine {
 	//Group v1
 	v1 := router.Group("api/v1")
 	// Group v1 non auth
+	v1.GET("/identified/code/:code/check", userController.GetCheckIdentifiedCode)
 	v1.POST("/user/register", userController.PostUserRegister)
 	v1.POST("/user/login", userController.PostUserLogin)
 	v1.POST("/admin/login", adminController.PostAdminLogin)
